Add remove history item endpoint; fix add or update history item bugs
